@@ -26,15 +26,9 @@ $app = JFactory::getApplication();
 		<link href="templates/<?php echo  $this->template ?>/css/template_rtl.css" rel="stylesheet" type="text/css" />
 	<?php endif; ?>
 
-	<?php if ($this->direction == 'rtl') : ?>
-	<link href="templates/<?php echo  $this->template ?>/css/template_rtl.css" rel="stylesheet" type="text/css" />
-	<?php endif; ?>
-
 	<!--[if gte IE 7]>
 	<link href="templates/<?php echo  $this->template ?>/css/ie7.css" rel="stylesheet" type="text/css" />
 	<![endif]-->
-
-
 </head>
 <body id="minwidth-body">
 	<div id="border-top" class="h_blue">
