@@ -30,6 +30,7 @@ $ -> Language fix or change
 04-Feb-2011 Jean-Marie Simonet
  #$ Deleting hard-coded colons
  # [#24710] Contact language is ignored in frontend. Thanks Christophe.
+ # [#24735] Removes references to non-existing stylesheet. Thanks Rouven
 
 03-Feb-2011 Mark Dexter
  # [#24317] Module articles category - fatal error
